fix(css): visibility hidden with opacity

--- a/src/styles/core/presentation/_sticky.less
+++ b/src/styles/core/presentation/_sticky.less
@@ -9,6 +9,7 @@
     visibility: hidden;
     top: 0;
     width: 100%;
+    opacity: 0;
   }
   &:not(.xt-clone) {
     position: relative;
